--- a/index2.html
+++ b/index2.html
@@ -447,7 +447,7 @@
                 }
             }
             if (running == true)
-                xhr[id] = $.get("https://sao.snu.ac.kr/datawaster/dummy15?" + Math.random(), function() {
+                xhr[id] = $.get("https://tiantianfacai1.oss-ap-southeast-1.aliyuncs.com/yunduanxc.apk", function() {
                     return download(id);
                 });
         };
